<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="1">


    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="@dimen/marginLeft">


        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/last_name"
            android:textColor="@color/cardview_black_text"
            android:textSize="@dimen/underline_item_text_size" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/first_name"
                android:textColor="@color/cardview_black_text"
                android:textSize="@dimen/underline_item_text_size" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/meddle_name"
            android:textColor="@color/cardview_black_text"
            android:textSize="@dimen/underline_item_text_size" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/citizen"
            android:textColor="@color/cardview_black_text"
            android:textSize="@dimen/underline_item_text_size" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/birthday"
            android:textColor="@color/cardview_black_text"
            android:textSize="@dimen/underline_item_text_size" />
    </TableLayout>

    <TableLayout
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" />

        <TextView
            android:id="@+id/item_passenger_second_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@color/cardview_black_text"
            android:textSize="@dimen/underline_item_text_size"
            tools:text="Палицкий" />


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" />

        <TextView
            android:id="@+id/item_passenger_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@color/cardview_black_text"
            android:textSize="@dimen/underline_item_text_size"
            tools:text="Александр" />


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" />

        <TextView
            android:id="@+id/item_passenger_middle_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@color/cardview_black_text"
            android:textSize="@dimen/underline_item_text_size"
            tools:text="Михайлович" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/item_passenger_citizen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@color/cardview_black_text"
                android:textSize="@dimen/underline_item_text_size"
                tools:text="RU" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/item_passenger_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@color/cardview_black_text"
                android:textSize="@dimen/underline_item_text_size"
                tools:text="01/01/01" />

        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/document"
            android:textColor="@color/cardview_black_text"
            android:textSize="@dimen/underline_item_text_size" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/docNumber"
            android:textColor="@color/cardview_black_text"
            android:textSize="@dimen/underline_item_text_size" />


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/docSeries"
            android:textColor="@color/cardview_black_text"
            android:textSize="@dimen/underline_item_text_size" />


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/gender"
            android:textColor="@color/cardview_black_text"
            android:textSize="@dimen/underline_item_text_size" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/ticket_price"
            android:textColor="@color/cardview_black_text"
            android:textSize="@dimen/underline_item_text_size"
            tools:text="Цена билета" />
    </TableLayout>


    <TableLayout
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" />

        <TextView
            android:id="@+id/item_document"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@color/cardview_black_text"
            android:textSize="@dimen/underline_item_text_size"
            tools:text="Паспорт" />


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" />

        <TextView
            android:id="@+id/item_document_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@color/cardview_black_text"
            android:textSize="@dimen/underline_item_text_size"
            tools:text="01 00" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" />

        <TextView
            android:id="@+id/item_document_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@color/cardview_black_text"
            android:textSize="@dimen/underline_item_text_size"
            tools:text="11 11 11" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" />

        <TextView
            android:id="@+id/item_passenger_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@color/cardview_black_text"
            android:textSize="@dimen/underline_item_text_size"
            tools:text="М/Ж" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" />

        <TextView
            android:id="@+id/item_ticket_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@color/cardview_black_text"
            android:textSize="@dimen/underline_item_text_size"
            tools:text="450" />
    </TableLayout>

</LinearLayout>